Fix spacing under buttons

--- a/Page7/style.css
+++ b/Page7/style.css
@@ -30,3 +30,6 @@
     height: fit-content;
     padding-bottom: 100px;
 }
+.button1{
+    margin-bottom: 15px;
+}
